tests/positive/Termination/TerminatingF.mjuvix
module TerminatingF;

axiom A : Type;

terminating
f : A -> A -> A;

g : A -> A -> A;

g x y := f x x;
f x y := g x (f x x);

end;
