tests/negative/MicroJuvix/NoStrictlyPositiveDataTypes/E5.mjuvix
module E5;

inductive T0 (A : Type){
c0 : (A -> T0 A) -> T0 A;
};

axiom B : Type;
inductive T1 (A : Type) {
c1 : (B -> T0 A) -> T1 A;
};

inductive T2 {
c2: (B -> (B -> T1 T2)) -> T2;
};

end;
